--- a/src/Maybe.Tests/Maybe.Tests.csproj
+++ b/src/Maybe.Tests/Maybe.Tests.csproj
@@ -64,6 +64,7 @@
     <Compile Include="MaybeObjectsTests.cs" />
     <Compile Include="MaybeTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RealLifeExamples.cs" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
